--- a/contact.html
+++ b/contact.html
@@ -1,39 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact | Eleanor Maynard</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Contact</title>
+  <link rel="stylesheet" type="text/css" href="Assets/CSS/style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"><crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
 <body>
 
-<header>
-  <div class="wrapper">
-    <a href="#" id="logo">Eleanor Maynard</a>
+  <header id="masthead">
+    <div class="container">
+      <a href="#" id="logo">Eleanor Maynard</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+        <a href="Assets/Resume/EM_Resume.pdf" class="myButton" download="Resume">
+          <button>Resume</button>
+      </nav>
+    </div>
+  </header>
 
-    <nav>
-      <ul>
-        <li><a href="index.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Contact</h1>
 
-<div id="container" class="wrapper">
-  <div id="content" class="module">
-    <h1>Contact</h1>
-  
-    <form id="contact-form">
+      <form id="contact-form">
         <ul>
           <li>
             <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+            <input type="text" id="name" name="name" placeholder="Type your name here" required="required">
           </li>
           <li>
             <label for="email">Email</label>
@@ -47,17 +49,24 @@
         <input type="submit">
       </form>
 
+    </section>
+
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
+
+        <a href="https://github.com/EMaynard802"><img src="Assets/Images/iconfinder_Github_1298743.png" class="social" alt="Github"></a>
+        <a href="https://www.linkedin.com/in/eleanor-m-a33a6a5/"><img src="Assets/Images/iconfinder_1_Linkedin_unofficial_colored_svg_5296501.png" class="social" alt="LinkedIn"></a>
+
+      </div>
+    </section>
   </div>
 
-  <div id="social" class="module">
-    <h2>Connect with Me</h2>
-
-    <a href="#"><img src="assets/images/iconfinder_1_Facebook_colored_svg_copy_5296499 (1).png"></a>
-    <a href="#"><img src="assets/images/iconfinder_1_Linkedin_unofficial_colored_svg_5296501.png"></a>
-    <a href="#"><img src="assets/images/iconfinder_Github_1298743.png"></a>
-  </div>
-</div>
-  <footer> Copyright &copy; 2019 </footer>
-    
+  <footer>
+    <div class="container">
+      Copyright 2020 &copy;
+    </div>
+  </footer>
 </body>
+
 </html>
