--- a/contact.html
+++ b/contact.html
@@ -1,56 +1,85 @@
-<!doctype html>
-<html lang="en-us">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Contact</title>
-  <link rel="stylesheet" type="text/css" href="Assets/CSS/style.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"><crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-</head>
+    <!-- Bootstrap CSS -->
+    <link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous"
+  />
+  <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Portfolio</title>
+  </head>
+  <body>
 
-<body>
-
-  <header id="masthead">
-    <div class="container">
-      <a href="#" id="logo">Eleanor Maynard</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-        <a href="Assets/Resume/EM_Resume.pdf" class="myButton" download="Resume">
-          <button>Resume</button>
+    <!-- Nav Bar Here -->
+    <nav class="navbar navbar-expand-md navbar-light bg-white mb-5 p-0 sticky-top">
+        <div class="container">
+          <a class="navbar-brand p-3">Eleanor Maynard</a>
+          <div class="collapse navbar-collapse" id="navbarNav">
+  
+    <!-- UL List -->
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">About<span class="border-right ml-3"></span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="portfolio.html">Portfolio<span class="border-right ml-3"></span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+              <a href="assets/Resume/EM_Resume.pdf" class="myButton" download="Resume">
+                <button>Resume</button>
+            </ul>
+          </div>
+        </div>
       </nav>
-    </div>
-  </header>
+    
 
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>Contact</h1>
+    <!-- Image & Text -->
+    <div class="container m-auto">
+      <div class="main">
+        <div class="row ml-3 mt-3">
+          <div class="col-sm-12">
+            <div class="about_me">
+              <span class="bg-white text-info">Contact</span>
+            </div>
+          </div>
+        </div>
 
-      <form id="contact-form">
-        <ul>
-          <li>
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="Type your name here" required="required">
-          </li>
-          <li>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
-          </li>
-          <li>
-            <label for="message">Message</label>
-            <textarea id="message" name="message" required="required"></textarea>
-          </li>
-        </ul>
-        <input type="submit">
-      </form>
+        <hr class="bg-light ml-4 mr-4" />
+    
+    <!-- Contact Form -->
+    <form>
+            <div class="form-group m-4">
+                 <label for="exampleFormControlTextarea1">Name</label>
+                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" placeholder="John Smith"></textarea>
+            </div>
 
-    </section>
+            <div class="form-group m-4">
+                <label for="exampleFormControlInput1">Email</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@gmail.com">
+            </div>
 
+            <div class="form-group m-4">
+                <label for="exampleFormControlTextarea1">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+            </div>
+    </form>
+
+    <!-- Submit Button -->
+        <input class="btn btn-primary m-4" type="submit" value="Submit">
+    <!-- Social Media -->
     <section class="sidebar">
       <div id="connect">
         <h2>Connect with Me</h2>
@@ -60,13 +89,14 @@
 
       </div>
     </section>
-  </div>
+ 
 
-  <footer>
-    <div class="container">
-      Copyright 2020 &copy;
-    </div>
-  </footer>
-</body>
-
-</html>
+      <!-- Footer -->
+      <div class="fixed-bottom">
+            <footer id="footer">
+              Copyright &copy;
+            </footer>
+          </div>
+        </div>
+      </body>
+    </html>
