--- a/portfolio.html
+++ b/portfolio.html
@@ -1,112 +1,128 @@
-<!doctype html>
-<html lang="en-us">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Portfolio | Eleanor Maynard</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous"
+  />
+  <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Portfolio</title>
+  </head>
+  <body>
 
- <style>
-  .btn-primary {
-    background-color: #4aaaa5;
-    border-color: #5bc2c2
-    }
-  </style>
+    <!-- Nav Bar Here -->
+    <nav class="navbar navbar-expand-md navbar-light bg-white mb-5 p-0 sticky-top">
+        <div class="container">
+          <a class="navbar-brand p-3">Eleanor Maynard</a>
+          <div class="collapse navbar-collapse" id="navbarNav">
+  
+    <!-- UL List -->
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">About<span class="border-right ml-3"></span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="portfolio.html">Portfolio<span class="border-right ml-3"></span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+              <a href="assets/Resume/EM_Resume.pdf" class="myButton" download="Resume">
+                <button>Resume</button>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
-</head>
+    <!-- Header of the Main area -->
+    <div class="container">
+      <div class="main">
+        <div class="row ml-3 mt-3">
+          <div class="col-sm-12">
+            <div class="about_me">
+              <span class="bg-white text-info">Portfolio</span>
+            </div>
+          </div>
+        </div>
 
-<body style=height:max-content>
-<!-- Navigation -->
-<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top ml-2" style=position:absolute>
-    <div class="container" style=background:white>
-      <a class="navbar-brand ml-4" href="#">
-            <img src="Assets/Images/header.png" alt="Eleanor" style=width:360px style=height:125px>
-          </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav a active">
-            <a class="nav-link" href="index.html">About
-                  <span class="sr-only">(current)</span>
-                </a>
-          </li>
-          <li class="nav a">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav a">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-   <div class="container-fluid ml-5"></div>
-   <div class="row top-buffer ml-4" style=position:absolute> 
-        <div class="col-lg-12 mt-5 ml-5 py-4" style=background:white><h3 style=font-weight:bolder>Portfolio</h3></div>
-        <div class="row" style=width:93%>           
-        <div class="col-sm-5 ml-5 mt-0">
-          <div class="card h-100" style=min-width:30% style=max-width:100% >
-            <div class="card-body">
-              <img src="Assets/Images/Crime.png" style=width:100% height=90%>
-              <a href="https://github.com/shelbypalumbo/Heat-Wave-Crime-Data" class="btn btn-primary" style=width:100%>Project 1: Pulls data from FBI/CBE & Mapbox APIs</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-5 ml-5 mt-0">
-          <div class="card h-100 style=min-width:30% style=max-width:100%">
-            <div class="card-body">
-              <img src="Assets/Images/pswgeneratot.png" style=width:100% height=90%>
-              <a href="https://emaynard802.github.io/Password-Generator/." class="btn btn-primary" style=width:100%>Password-Generator</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row" style=width:93%>           
-        <div class="col-sm-5 ml-5 mt-3">
-          <div class="card h-100" style=min-width:30% style=max-width:100% >
-            <div class="card-body">
-              <img src="Assets/Images/Weather.png" style=width:100% height=90%>
-              <a href="https://emaynard802.github.io/Weather-Dashboard/" class="btn btn-primary" style=width:100%>5-Day Weather Dashboard</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-5 ml-5 mt-3">
-          <div class="card h-100" style=min-width:30% style=max-width:100% >
-            <div class="card-body">
-              <img src="Assets/Images/planner.png" style=width:100% height=90%>
-              <a href="https://emaynard802.github.io/Day-Planner/" class="btn btn-primary" style=width:100%>Work Day Planner</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row" style=width:93%>           
-        <div class="col-sm-5 ml-5 mt-3">
-          <div class="card h-100" style=min-width:30% style=max-width:100% >
-            <div class="card-body">
-              <img src="Assets/Images/thumbnail_large-1_rpg.jpg" style=width:100% height=90%>
-              <a href="#" class="btn btn-primary" style=width:100%>RPG Game</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-5 mt-3">  
-        </div>
-        <div class="clear"></div>
-            
-        <div class="container"> 
-              <footer>
-                  Copyright &copy;
+        <hr class="bg-light ml-4 mr-4"/>
+
+    <!-- Images & Lnks -->
+        <div class="row ml-3 mt-4">
+             <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
+                     <div class="img_responsive"><a href="https://emaynard802.github.io/Code-Quiz/">
+                        <img src="assets/images/quiz.png" width="280" height="200" alt="photo here">
+                        <p class="img_text">Quiz App</p>
+                    </a>
                 </div>
-              </footer>         
             </div>
+            <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
+                <div class="img_responsive"><a href="https://emaynard802.github.io/Password-Generator/.">
+                        <img src="assets/images/pswgeneratot.png" width="280" height="200" alt="photo here">
+                        <p class="img_text">Password Generator</p>
+                </div>
+              </a>
             </div>
-        
-      </body>  
-   
+            <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
+<!-- Empty div -->
+            </div>
+        </div>
 
+        <div class="row ml-3 mt-4">
+            <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
+                <div class="img_responsive"><a href="https://emaynard802.github.io/Day-Planner/">
+                        <img src="assets/images/planner.png" width="280" height="200" alt="photo here">
+                        <p class="img_text">Work Day Scheduler</p>
+                    </a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
+                <div class="img_responsive"><a href="https://emaynard802.github.io/Weather-Dashboard/">
+                        <img src="assets/images/Weather.png" width="280" height="200" alt="photo here">
+                        <p class="img_text">Weather Dashboard</p>
+                    </a>
+                </div>
+            </div>
+           <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
+<!-- Empty div -->
+           </div>
+        </div>
 
-</html>
+        <div class="row ml-3 mt-4">
+            <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
+                    <div class="img_responsive"><a href="https://github.com/shelbypalumbo/Heat-Wave-Crime-Data">
+                        <img src="assets/images/Crime.png" width="280" height="200" alt="photo here">
+                        <p class="img_text">Crime Data Group Project</p>
+                    </a>
+                </div>
+            </div>
+           <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
+<!-- Empty div -->
+           </div>
+
+           <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
+<!-- Empty div -->
+           </div>
+        </div>
+     </div>
+    </div>
+
+      <!-- Footer -->
+      <div class="fixed-bottom">
+            <footer id="footer">
+              Copyright &copy;
+            </footer>
+          </div>
+        </div>
+      </body>
+    </html>
