--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <div class="row mt-4 pl-4 pr-4">
         <div class="col-sm-4">
-          <img class="img-fluid" src="Assets/Images/Optimized-Version.jpg" alt="personal photo" />
+          <img class="img-fluid" src="assets/images/photo.jpg" alt="personal photo" />
         </div>
 
         <div class="col-sm-8">
