--- a/portfolio.html
+++ b/portfolio.html
@@ -95,22 +95,29 @@
             </div>
            <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
 <!-- Empty div -->
-           </div>
-        </div>
-
-        <div class="row ml-3 mt-4">
-            <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
-                    <div class="img_responsive"><a href="https://github.com/shelbypalumbo/Heat-Wave-Crime-Data">
-                        <img src="assets/images/Crime.png" width="280" height="200" alt="photo here">
-                        <p class="img_text">Crime Data Group Project</p>
-                    </a>
-                </div>
-            </div>
+   </div>
            <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
 <!-- Empty div -->
-           </div>
+<!-- Empty div -->
+</div>
+</div>
 
-           <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
+<div class="row ml-3 mt-4">
+    <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
+        <div class="img_responsive"><a href="https://github.com/shelbypalumbo/Heat-Wave-Crime-Data">
+                <img src="assets/images/Crime.png" width="280" height="200" alt="photo here">
+                <p class="img_text">Crime Data Group Project</p>
+            </a>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
+        <div class="img_responsive"><a href="https://burger-logger-node-app.herokuapp.com/index">
+                <img src="assets/images/Burger.png" width="280" height="200" alt="photo here">
+                <p class="img_text">Eat-Da-Burger!</p>
+            </a>
+        </div>
+    </div>
+   <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
 <!-- Empty div -->
            </div>
         </div>
