--- a/portfolio.html
+++ b/portfolio.html
@@ -121,10 +121,18 @@
 <!-- Empty div -->
            </div>
         </div>
-     </div>
-    </div>
-
-      <!-- Footer -->
+  <div class="row ml-3 mt-4">
+      <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
+          <div class="img_responsive"><a href="https://github.com/EMaynard802/Project2">
+                  <img src="assets/images/Shop_Wise.png" width="280" height="200" alt="photo here">
+                  <p class="img_text">Shop Wise</p>
+              </a>
+          </div>
+      </div>
+      <div class="col-xs-12 col-sm-10 col-md-5 col-lg-4 col-xl-4">
+      </div>
+      </div>
+           <!-- Footer -->
       <div class="fixed-bottom">
             <footer id="footer">
               Copyright &copy;
